--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,7 @@ app.*.map.json
 
 /.dart_tool/
 /.idea/
+GoogleService-Info.plist
+firebase_app_id_file.json
 firebase_options.dart
 google-services.json
